# controllers/orders.go
@@ -2,8 +2,10 @@ package controllers
 
 import (
 	"encoding/json"
+	"errors"
 	"fmt"
 	"strconv"
+	"strings"
 	"time"
 	"transaction_service/controllers/functions"
 	"transaction_service/models"
@@ -293,7 +295,10 @@ func (c *OrdersController) GetUserOrders() {
 		c.Ctx.Output.SetStatus(200)
 		c.Data["json"] = resp
 	} else {
-		c.Data["json"] = err.Error()
+		logs.Debug("An error occurred getting orders ", err.Error())
+		var resp = responses.OrdersResponseDTO{StatusCode: 608, Orders: nil, StatusDesc: "Failed to fetch orders"}
+		c.Ctx.Output.SetStatus(200)
+		c.Data["json"] = resp
 	}
 	c.ServeJSON()
 }
@@ -317,68 +322,131 @@ func (c *OrdersController) GetOne() {
 	c.ServeJSON()
 }
 
-// // GetAll ...
-// // @Title Get All
-// // @Description get Orders
-// // @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
-// // @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
-// // @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
-// // @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
-// // @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
-// // @Param	offset	query	string	false	"Start position of result set. Must be an integer"
-// // @Success 200 {object} models.Orders
-// // @Failure 403
-// // @router / [get]
-// func (c *OrdersController) GetAll() {
-// 	var fields []string
-// 	var sortby []string
-// 	var order []string
-// 	var query = make(map[string]string)
-// 	var limit int64 = 10
-// 	var offset int64
+// GetAll ...
+// @Title Get All
+// @Description get Orders
+// @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
+// @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
+// @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
+// @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
+// @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
+// @Param	offset	query	string	false	"Start position of result set. Must be an integer"
+// @Success 200 {object} models.Orders
+// @Failure 403
+// @router / [get]
+func (c *OrdersController) GetAll() {
+	var fields []string
+	var sortby []string
+	var order []string
+	var query = make(map[string]string)
+	var limit int64 = 10
+	var offset int64
 
-// 	// fields: col1,col2,entity.col3
-// 	if v := c.GetString("fields"); v != "" {
-// 		fields = strings.Split(v, ",")
-// 	}
-// 	// limit: 10 (default is 10)
-// 	if v, err := c.GetInt64("limit"); err == nil {
-// 		limit = v
-// 	}
-// 	// offset: 0 (default is 0)
-// 	if v, err := c.GetInt64("offset"); err == nil {
-// 		offset = v
-// 	}
-// 	// sortby: col1,col2
-// 	if v := c.GetString("sortby"); v != "" {
-// 		sortby = strings.Split(v, ",")
-// 	}
-// 	// order: desc,asc
-// 	if v := c.GetString("order"); v != "" {
-// 		order = strings.Split(v, ",")
-// 	}
-// 	// query: k:v,k:v
-// 	if v := c.GetString("query"); v != "" {
-// 		for _, cond := range strings.Split(v, ",") {
-// 			kv := strings.SplitN(cond, ":", 2)
-// 			if len(kv) != 2 {
-// 				c.Data["json"] = errors.New("Error: invalid query key/value pair")
-// 				c.ServeJSON()
-// 				return
-// 			}
-// 			k, v := kv[0], kv[1]
-// 			query[k] = v
-// 		}
-// 	}
+	// fields: col1,col2,entity.col3
+	if v := c.GetString("fields"); v != "" {
+		fields = strings.Split(v, ",")
+	}
+	// limit: 10 (default is 10)
+	if v, err := c.GetInt64("limit"); err == nil {
+		limit = v
+	}
+	// offset: 0 (default is 0)
+	if v, err := c.GetInt64("offset"); err == nil {
+		offset = v
+	}
+	// sortby: col1,col2
+	if v := c.GetString("sortby"); v != "" {
+		sortby = strings.Split(v, ",")
+	}
+	// order: desc,asc
+	if v := c.GetString("order"); v != "" {
+		order = strings.Split(v, ",")
+	}
+	// query: k:v,k:v
+	if v := c.GetString("query"); v != "" {
+		for _, cond := range strings.Split(v, ",") {
+			kv := strings.SplitN(cond, ":", 2)
+			if len(kv) != 2 {
+				c.Data["json"] = errors.New("Error: invalid query key/value pair")
+				c.ServeJSON()
+				return
+			}
+			k, v := kv[0], kv[1]
+			query[k] = v
+		}
+	}
 
-// 	l, err := models.GetAllOrders(query, fields, sortby, order, offset, limit)
-// 	if err != nil {
-// 		c.Data["json"] = err.Error()
-// 	} else {
-// 		c.Data["json"] = l
-// 	}
-// 	c.ServeJSON()
-// }
+	l, err := models.GetAllOrders(query, fields, sortby, order, offset, limit)
+	if err != nil {
+		c.Data["json"] = err.Error()
+	} else {
+		c.Data["json"] = l
+	}
+	c.ServeJSON()
+}
+
+// GetAllByBranch ...
+// @Title Get All Orders by Branch
+// @Description get Orders by branch
+// @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
+// @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
+// @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
+// @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
+// @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
+// @Param	offset	query	string	false	"Start position of result set. Must be an integer"
+// @Success 200 {object} models.Orders
+// @Failure 403
+// @router /branch/:id [get]
+func (c *OrdersController) GetAllByBranch() {
+	var fields []string
+	var sortby []string
+	var order []string
+	var query = make(map[string]string)
+	var limit int64 = 10
+	var offset int64
+
+	// fields: col1,col2,entity.col3
+	if v := c.GetString("fields"); v != "" {
+		fields = strings.Split(v, ",")
+	}
+	// limit: 10 (default is 10)
+	if v, err := c.GetInt64("limit"); err == nil {
+		limit = v
+	}
+	// offset: 0 (default is 0)
+	if v, err := c.GetInt64("offset"); err == nil {
+		offset = v
+	}
+	// sortby: col1,col2
+	if v := c.GetString("sortby"); v != "" {
+		sortby = strings.Split(v, ",")
+	}
+	// order: desc,asc
+	if v := c.GetString("order"); v != "" {
+		order = strings.Split(v, ",")
+	}
+	// query: k:v,k:v
+	if v := c.GetString("query"); v != "" {
+		for _, cond := range strings.Split(v, ",") {
+			kv := strings.SplitN(cond, ":", 2)
+			if len(kv) != 2 {
+				c.Data["json"] = errors.New("Error: invalid query key/value pair")
+				c.ServeJSON()
+				return
+			}
+			k, v := kv[0], kv[1]
+			query[k] = v
+		}
+	}
+
+	l, err := models.GetAllOrders(query, fields, sortby, order, offset, limit)
+	if err != nil {
+		c.Data["json"] = err.Error()
+	} else {
+		c.Data["json"] = l
+	}
+	c.ServeJSON()
+}
 
 // Put ...
 // @Title Put
@@ -415,6 +483,28 @@ func (c *OrdersController) Delete() {
 		c.Data["json"] = "OK"
 	} else {
 		c.Data["json"] = err.Error()
+	}
+	c.ServeJSON()
+}
+
+// GetItemCount ...
+// @Title Get Item Quantity
+// @Description get Item_quantity by Item id
+// @Param	id		path 	string	true		"The key for staticblock"
+// @Success 200 {object} responses.StringResponseDTO
+// @Failure 403 :id is empty
+// @router /count/ [get]
+func (c *OrdersController) GetOrderCount() {
+	// q, err := models.GetItemsById(id)
+	v, err := models.GetOrderCount()
+	count := strconv.FormatInt(v, 10)
+	if err != nil {
+		logs.Error("Error fetching count of customers ... ", err.Error())
+		resp := responses.StringResponseDTO{StatusCode: 301, Value: "", StatusDesc: err.Error()}
+		c.Data["json"] = resp
+	} else {
+		resp := responses.StringResponseDTO{StatusCode: 200, Value: count, StatusDesc: "Count fetched successfully"}
+		c.Data["json"] = resp
 	}
 	c.ServeJSON()
 }
